fixed landing page link redirects

--- a/beginner/index.html
+++ b/beginner/index.html
@@ -303,10 +303,10 @@
                             <h5 data-aos='fade-up' data-aos-delay='100'>Contents</h5>
                             <div class='col-lg-8'>
                                 <ul class='dashes' data-aos='fade-right'>
-                                    <li><a href='#reqs' class='custom-link' data-aos='fade-right'>- Structure Diagrams</a></li>
-                                    <li><a href='' class='custom-link' data-aos='fade-right'>- Flowcharts</a></li>
-                                    <li><a href='' class='custom-link' data-aos='fade-right'>- Pseudocode</a></li>
-                                    <li><a href='' class='custom-link' data-aos='fade-right'>- Wireframes</a></li>
+                                    <li><a href='#structdiagram' class='custom-link' data-aos='fade-right'>- Structure Diagrams</a></li>
+                                    <li><a href='#flowchartdiagram' class='custom-link' data-aos='fade-right'>- Flowcharts</a></li>
+                                    <li><a href='#pseudocode' class='custom-link' data-aos='fade-right'>- Pseudocode</a></li>
+                                    <li><a href='#wireframe' class='custom-link' data-aos='fade-right'>- Wireframes</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -330,7 +330,7 @@
 
                                         <hr>
 
-                                        <h4>Structure Diagrams</h4>
+                                        <h4 id='structdiagram'>Structure Diagrams</h4>
 
                                         <p class='explain'>Breaking down a problem into smaller and smaller steps (subproblems) and is looked at from top down & left to right</p>
                                         <div class="custom-card-image rounded-4"><img class='rounded-4' src="./resources/struct-diagram.png" alt="Structure Diagram" style='width: 30%; height: 30%;'></div>
@@ -344,7 +344,7 @@
 
                                         <hr>
 
-                                        <h4>Flowcharts</h4>
+                                        <h4 id='flowchartdiagram'>Flowcharts</h4>
 
                                         <p class='explain'>Represents a set of instructions including the flow of the program. It has specific symbols for set actions</p>
 
@@ -353,7 +353,7 @@
 
                                         <hr>
 
-                                        <h4>Pseudocode</h4>
+                                        <h4 id='pseudocode'>Pseudocode</h4>
 
                                         <p class='explain'>
                                             Pseudocode uses english-like text to describe steps in a program e.g
@@ -366,11 +366,19 @@ SEND "Of Course It Is" TO DISPLAY
 
                                         <hr>
 
-                                        <h4>Wireframes</h4>
+                                        <h4 id='wireframe'>Wireframes</h4>
 
                                         <p class='explain'>We don't need to talk too much about wireframes at this level but here is a graphic depiction of one</p>
 
                                         <div class="custom-card-image rounded-4"><img class='rounded-4' src="./resources/wireframe-diagram.png" alt="Structure Diagram" style='width: 30%; height: 30%;'></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='row gy-2'>
+                                <div class='col-12 mb-0' data-aos='fade-up' data-aos-delay='300'>
+                                    <div class='bg-base p-4 rounded-4 shadow-effect'>
+                                        <h4>Design</h4>
+                                        
                                     </div>
                                 </div>
                             </div>
