--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 The best starting point for new programmers, you'll learn the basics of programming alongside the necessary 
                                 theory to have a strong foundation with which to build from. 
                             </p>
-                            <a href='turtlehelm.github.io/learning/beginner' class='custom-link'>Start Studying</a>
+                            <a href='https://turtlehelm.github.io/learning/beginner' class='custom-link'>Start Studying</a>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                             The follow-up from beginner, you'll build upon the basics you've already learned, in turn allowing for a much broader 
                             understanding of programming. Following the completion of this, you will become a more proficient and concise programmer.
                           </p>
-                          <a href='turtlehelm.github.io/learning/intermediate' class='custom-link'>Start Studying</a>
+                          <a href='https://turtlehelm.github.io/learning/intermediate' class='custom-link disabled'>Start Studying</a>
                       </div>
                   </div>
               </div>
@@ -97,7 +97,7 @@
                             Once you finish this you'll have all the skills you need to be a competent programmer and continue with self study into your
                             preferred niche.
                         </p>
-                        <a href='turtlehelm.github.io/learning/advanced' class='custom-link'>Start Studying</a>
+                        <a href='https://turtlehelm.github.io/learning/advanced' class='custom-link'>Start Studying</a>
                     </div>
                 </div>
             </div>
